--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Universal Psychological Services</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Universal Psychological Services</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Nanum Myeongjo', Georgia, serif;
+      background: #FBFAFD;
+      color: #1e293b;
+    }
+
+    header {
+      background: #9D8DEB;
+      padding: 2rem;
+      text-align: center;
+      font-weight: 800;
+      font-size: 2.5rem;
+    }
+
+    section {
+      max-width: 900px;
+      margin: 3rem auto;
+      padding: 2rem;
+      border-radius: 20px;
+    }
+
+    .hero {
+      background: #9DC7F4;
+      text-align: center;
+    }
+
+    .services div {
+      margin-bottom: 1.5rem;
+      padding: 1.5rem;
+      border-radius: 16px;
+      font-weight: 600;
+    }
+  </style>
+</head>
+
+<body>
+
+<header>
+  Universal Psychological Services
+</header>
+
+<section class="hero">
+  <h2>Where You Matter.</h2>
+  <p><strong>Private – Professional – Personal</strong></p>
+  <p>
+    Welcome to Universal Psychological Services, where each client matters.
+    We value and provide unique therapeutic experiences for all.
+  </p>
+</section>
+
+<section class="services">
+  <h2>Our Services</h2>
+
+  <div style="background:#FADADD;">Drug and Alcohol Abuse</div>
+  <div style="background:#E6F4F1;">Parent–School Consultation</div>
+  <div style="background:#FFF1C1;">Executive Function Coaching</div>
+  <div style="background:#E9E4FF;">Psychological Evaluations</div>
+  <div style="background:#EAF7D9;">Neuropsychological Evaluations</div>
+  <div style="background:#FFE6F2;">Forensic Evaluations</div>
+</section>
+
+</body>
 </html>
