--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
   </p>
 </section>
 
-<section class="services">
-  <h2>Our Services</h2>
+<div id="services" style="display:none;">
+  <section class="services">
+    <h2>Our Services</h2>
 
   <div style="background:#FADADD;">Drug and Alcohol Abuse</div>
   <div style="background:#E6F4F1;">Parent–School Consultation</div>
@@ -67,7 +68,8 @@
   <div style="background:#E9E4FF;">Psychological Evaluations</div>
   <div style="background:#EAF7D9;">Neuropsychological Evaluations</div>
   <div style="background:#FFE6F2;">Forensic Evaluations</div>
-</section>
+  </section>
+</div>
 
 </body>
 </html>
