--- a/index.html
+++ b/index.html
@@ -42,19 +42,20 @@
       position: absolute;
       right: 0;
       background: white;
-      border-radius: 12px;
+      border-radius: 14px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      margin-top: 8px;
+      margin-top: 10px;
       overflow: hidden;
-      min-width: 180px;
+      min-width: 260px; /* widened */
     }
 
     .dropdown a {
       display: block;
-      padding: 12px 16px;
+      padding: 14px 22px; /* more breathing room */
       text-decoration: none;
       color: #1e293b;
       font-weight: 600;
+      font-size: 0.9rem; /* smaller text */
     }
 
     .dropdown a:hover {
@@ -110,6 +111,4 @@
 </script>
 
 </body>
-</html>
-
 </html>
